--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,11 +1,9 @@
-# These are supported funding model platforms
-
 github: [craighckby-stack]
-patreon: # Replace with your Patreon username
-open_collective: # Replace with your Open Collective username
-ko_fi: # Replace with your Ko-fi username
-tidelift: # Replace with your Tidelift platform name
-community_bridge: # Replace with your Community Bridge project-name
-issuehunt: # Replace with your IssueHunt username
-otechie: # Replace with your Otechie username
+patreon:
+open_collective:
+ko_fi:
+tidelift:
+community_bridge:
+issuehunt:
+otechie:
 custom: ['https://paypal.me/example', 'https://buymeacoffee.com/example']
