--- a/.editorconfig
+++ b/.editorconfig
@@ -3,27 +3,22 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# Global settings for most file types
 [*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
+# Standard indentation size for most languages (HTML, JS, CSS, JSON, YML, etc.)
 indent_size = 2
 
+# Exceptions / Overrides
+
+# Markdown requires allowing trailing whitespace for explicit line breaks
 [*.md]
 trim_trailing_whitespace = false
 
-[*.yml]
-indent_size = 2
-
-[*.json]
-indent_size = 2
-
-[*.{html,css,js,ts,tsx,jsx}]
-indent_size = 2
-
-# Tab indentation
+# Makefiles must use tabs
 [Makefile]
 indent_style = tab
