--- a/.prettierignore
+++ b/.prettierignore
@@ -1,27 +1,41 @@
-# Dependencies
+# Dependencies & Lock Files
 node_modules/
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+bun.lockb
+vendor/
 
-# Build outputs
+# Build Outputs & Cache Directories
 dist/
 build/
-.next/
 out/
 .cache/
+.next/
+.nuxt/
+.parcel-cache/
+.turbo/
+coverage/
+tmp/
+target/
+public/
 
-# Logs
+# Logs & Debug
 logs/
 *.log
+npm-debug.log*
+lerna-debug.log
 
-# OS
+# IDE & OS Configuration
 .DS_Store
 Thumbs.db
 __MACOSX/
+.vscode/
+.idea/
 
-# Other
-.env
-.env.local
-*.min.js
-*.min.css
+# Sensitive & Volatile Files
+.env*
+.venv/
+
+# Compiled/Minified Assets
+*.min.*
