--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,36 @@
-# GitHub Configuration
+# ----------------------------------------------------------------------
+# SECTION 1: CORE SECRETS (Server-Side)
+# These keys MUST NOT be prefixed with NEXT_PUBLIC_
+# ----------------------------------------------------------------------
+
+# Gemini/Google AI Studio API Key
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# GitHub Token (Used for CI/CD, actions, or backend operations)
 GITHUB_TOKEN=your_github_personal_access_token_here
 
-# Firebase Configuration (Optional)
+
+# ----------------------------------------------------------------------
+# SECTION 2: APPLICATION CONFIGURATION (Public/Client-Side)
+# These variables MUST be prefixed with NEXT_PUBLIC_
+# ----------------------------------------------------------------------
+
+# Application Identifier
+NEXT_PUBLIC_APP_ID=your_app_id_here
+
+# Repository Details (Used for linking or metadata)
+NEXT_PUBLIC_REPO_OWNER=craighckby-stack
+NEXT_PUBLIC_REPO_NAME=ai-scaffold
+
+
+# ----------------------------------------------------------------------
+# SECTION 3: EXTERNAL SERVICES - FIREBASE (Public/Client-Side)
+# Optional configuration if Firebase is utilized
+# ----------------------------------------------------------------------
+
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_bucket.appspot.com
-
-# AI Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# Application Configuration
-NEXT_PUBLIC_APP_ID=your_app_id
-NEXT_PUBLIC_REPO_OWNER=craighckby-stack
-NEXT_PUBLIC_REPO_NAME=ai-scaffold
+# NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=optional_sender_id
+# NEXT_PUBLIC_FIREBASE_APP_ID=optional_app_id
