--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,9 @@
-# NPM Configuration
+# NPM Configuration (Optimized for reproducibility, security, and cleanliness)
 save-exact=true
-legacy-peer-deps=true
+# Removing legacy-peer-deps=true forces strict, modern dependency resolution (npm v7+) which improves long-term stability and optimization.
+# Ensures secure connections are mandatory.
+strict-ssl=true
+# Disables the update notification feature for cleaner terminal output and faster CI runs.
+update-notifier=false
+# Increases connection parallelism during fetching, improving install speed, especially in CI environments.
+maxsockets=50
