EVOLVE: package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ai-scaffold",
-  "version": "18.0.0",
-  "description": "Dalek Linear Evolution - Recursive Commits v18",
+  "version": "19.0.0",
+  "description": "Dalek Linear Evolution - Optimization Focus v19: Minimal Dependency Static Host",
   "main": "index.html",
   "scripts": {
-    "start": "python -m http.server 8000",
-    "dev": "python -m http.server 8000",
+    "serve": "python -m http.server 8000",
+    "start": "npm run serve",
+    "build": "echo 'Static content; no complex build step required'",
     "lint": "echo 'No linter configured'",
-    "test": "echo 'Run tests in tests/ directory'",
+    "test": "echo 'Run tests in tests/'",
     "validate": "node tools/validate.js",
     "setup": "bash scripts/setup.sh",
     "deploy": "bash scripts/deploy.sh"
@@ -18,7 +19,8 @@
     "github",
     "automation",
     "code-refactoring",
-    "self-improving"
+    "self-improving",
+    "minimal"
   ],
   "author": "Dalek Khan AGI",
   "license": "MIT",
